@@ -51,11 +51,11 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   6f1bec812a6376338cdb16f11929eb5e866a3fba 2017071600 mingw32-mpc.xml
   7744f313f4b203f4fd3f0d73b74ea012c98369db 2017071600 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2017072600 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2017073100 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
-  03ddf8b80072f182e069250d91957d90dec73f2d 2017030900 mingw32-runtime.xml
+  586719b6ec83bbcc69242aab146051314c743f95 2017073100 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   c223ecd7389eb02948b54f8959d595cf608306a7 2013101200 mingw32-zlib.xml
