@@ -29,14 +29,15 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
+        <release tarname="mingwrt-5.0.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.0-mingw32-dev.tar.xz" />
-        <release tarname="mingwrt-3.22-mingw32-dev.tar.xz" />
-        <release tarname="mingwrt-3.22.1-mingw32-dev.tar.xz" />
-        <release tarname="mingwrt-3.22.2-mingw32-dev.tar.xz" />
-        <release tarname="mingwrt-3.22.3-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.22.4-mingw32-dev.tar.xz" />
-        <release tarname="mingwrt-3.21-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.22.3-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.22.1-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.22-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.21-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dev.tar.lzma">
           <requires eq="mingwrt-%-mingw32-lic.tar" />
           <requires eq="mingwrt-%-mingw32-man.tar" />
@@ -56,14 +57,15 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.0.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.0-mingw32-dll.tar.xz" />
-        <release tarname="mingwrt-3.22-mingw32-dll.tar.xz" />
-        <release tarname="mingwrt-3.22.1-mingw32-dll.tar.xz" />
-        <release tarname="mingwrt-3.22.2-mingw32-dll.tar.xz" />
-        <release tarname="mingwrt-3.22.3-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.22.4-mingw32-dll.tar.xz" />
-        <release tarname="mingwrt-3.21-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.22.3-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.22.1-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.22-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.21-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dll.tar.lzma" />
         <release tarname="mingwrt-3.20-mingw32-dll.tar.gz" />
         <release tarname="mingwrt-3.19-mingw32-dll.tar.gz" />
@@ -71,14 +73,15 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.0.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.0-mingw32-lic.tar.xz" />
-        <release tarname="mingwrt-3.22-mingw32-lic.tar.xz" />
-        <release tarname="mingwrt-3.22.1-mingw32-lic.tar.xz" />
-        <release tarname="mingwrt-3.22.2-mingw32-lic.tar.xz" />
-        <release tarname="mingwrt-3.22.3-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.22.4-mingw32-lic.tar.xz" />
-        <release tarname="mingwrt-3.21-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.22.3-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.22.1-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.22-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.21-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-lic.tar.lzma">
           <requires eq="mingwrt-%-mingw32-dev.tar" />
           <download tarname="none" />
@@ -98,14 +101,15 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.0.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.0-mingw32-man.tar.xz" />
-        <release tarname="mingwrt-3.22-mingw32-man.tar.xz" />
-        <release tarname="mingwrt-3.22.1-mingw32-man.tar.xz" />
-        <release tarname="mingwrt-3.22.2-mingw32-man.tar.xz" />
-        <release tarname="mingwrt-3.22.3-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.22.4-mingw32-man.tar.xz" />
-        <release tarname="mingwrt-3.21-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.22.3-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.22.1-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.22-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.21-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-man.tar.lzma">
           <requires eq="mingwrt-%-mingw32-dev.tar" />
           <download tarname="none" />
@@ -143,13 +147,14 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
-        <release tarname="libmingwex-5.0-mingw32-dev.tar.xz">
-          <requires eq="libmingwex-%-mingw32-dll-0.tar" />
-        </release>
+        <release tarname="libmingwex-5.0.1-mingw32-dev.tar.xz" />
+        <release tarname="libmingwex-5.0-mingw32-dev.tar.xz" />
+        <requires eq="libmingwex-%-mingw32-dll-0.tar" />
         <requires eq="mingwrt-%-mingw32-dev.tar" />
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.0.1-mingw32-dll-0.tar.xz" />
         <release tarname="libmingwex-5.0-mingw32-dll-0.tar.xz" />
       </component>
     </package>
@@ -173,6 +178,7 @@
       <licence tarname="w32api-%-mingw32-dev.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.0.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.0-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.18.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.18.1-mingw32-dev.tar.xz" />
